css/obBase.css
/* ... */
.modal .homeModal-accordion .searchWrapper,
.modal .aboutModal-accordion .searchWrapper {
  background: #086A9E;
  border-bottom: solid 1px #327EB8;
}

.modal .homeModal-accordion .flexRow,
.modal .aboutModal-accordion .flexRow {
  width: 100%;
}

.modal .homeModal-accordion .accordion-child,
.modal .aboutModal-accordion .accordion-child {
  width: 525px;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
}

.modal .homeModal-settings,
.modal .homeModal-settings.flexRow {
  height: 222px;
  overflow-y: auto;
  background-color: #086A9E;
}

.modal .homeModal-settings.homeModal-settings-noSearch {
  height: 274px;
}

.modal .homeModal-avatarPreview {
  background: url('../imgs/defaultUser.png') 100% 100%;
  background-size: cover;
  margin-top: 30px;
}

.modal .aboutModal-accordion .modal-section {
  display: block;
  height: 315px;
  font-weight: 400;
  padding: 10px 20px;
  overflow: scroll;
  font-size: 14px;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
}

.uploadPhotoControls {
  position: absolute;
  top: 146px;
  left: 134px;
  z-index: 1;
}

.uploadPhotoControls .btn {
  float: none;
}

.default-avatar {
  border-radius: 3px;
  color: #086a9e;
  font-size: 73px;
  height: 76px;
  text-align: center;
  width: 80px;
}

.fancy-heading {
  font-weight: 200;
  font-size: 34px;
  opacity: .8;
  letter-spacing: 1.5px;
  margin-bottom: 0;
  margin-left: 0;
}

.page-contractTitle {
  font-size: 26px;
  font-weight: 500;
  letter-spacing: .8px;
  margin-bottom: 0;
  margin-top: 10px;
  opacity: 1;
}

#customizeControls {
  position: absolute;
  left: 30px;
  top: 30px;
  z-index: 1;
}

#customizeControls .js-customizePrimaryColor .btn-square {
  border-top-left-radius: 3px;
  border-top-right-radius: 3px;
}

#customizeControls .js-customizeTextColor .btn-square {
  border-bottom-left-radius: 3px;
  border-bottom-right-radius: 3px;
}

#customizeControls .btn-square {
  box-shadow: 0 1px 2px #898989;
  margin-bottom: 0;
  width: 40px;
  height: 40px;
  border: solid 2px #fff;
  border-radius: 0;
  border-bottom: 0;
}

.customizePrimaryColorRecommendations,
.customizeSecondaryColorRecommendations,
.customizeBackgroundColorRecommendations,
.customizeTextColorRecommendations {
  position: absolute;
  left: 36px;
  background: #252525;
  width: 0;
  top: 0;
  height: 38px;
  line-height: 38px;
  padding: 2px;
  border-radius: 0;
  overflow: hidden;
  border-top-right-radius: 3px;
  border-bottom-right-radius: 3px;
  transition: width .35s cubic-bezier(0, 0, 0.2, 1);
  box-sizing: border-box;
}

.customizePrimaryColorRecommendations.show,
.customizeSecondaryColorRecommendations.show,
.customizeBackgroundColorRecommendations.show  {
  width: 273px;
}

.customizeTextColorRecommendations.show {
  width: 121px;
}

.customColorChoice {
  background: #fff;
  display: inline-block;
  width: 32px;
  height: 32px;
  margin-right: 2px;
  margin-top: 3px;
  margin-bottom: 5px;
  cursor: pointer;
  z-index: 5;
  border-radius: 1px;
  transition: background .5s cubic-bezier(0, 0, 0.2, 1);
}

.customColorChoice:hover {
  outline: 2px solid #ccc;
}

.customColorChoiceControl {
  width: 32px;
  opacity: .5;
  text-align: center;
  transition: opacity .25s cubic-bezier(0, 0, 0.2, 1);

}


.customColorChoice:hover:hover {
  outline: 2px solid #ccc;
  opacity: 1;
}

.customColorPicker {
  top: 10px;
  margin-left: -8px;
  font-size: 18px;
  position: absolute;
}

.discoverToggleHelper {
  top: -40px;
  width: auto;
  max-width: 300px;
  background: rgba(37,37,37,.95);
  border-radius: 3px;
  color: #fff;
  padding: 8px 10px;
  position: absolute;
  z-index: 10;
  height: 16px;
  font-size: 11px;
  right: 0;
  line-height: 16px;
  opacity: 1;
  white-space: nowrap;
  pointer-events: none;
  margin-top: 2px;
}

.discoverToggleHelper:after {
  content: " ";
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 10px 10px 0 10px;
  border-color: rgba(37,37,37,.95) transparent transparent transparent;
  position: absolute;
  bottom: -10px;
  right: 48px;
}

.tooltip {
  position: relative;
}

.tooltip:hover:after{
  background: rgba(37,37,37,.95);
  border-radius: 3px;
  bottom: -32px;
  color: #fff;
  content: attr(data-tooltip);
  padding: 8px 10px;
  position: absolute;
  z-index: 10;
  height: 16px;
  font-size: 11px;
  left: 0;
  line-height: 16px;
  opacity: 1;
  white-space: nowrap;
  pointer-events: none;
  margin-top: 2px;
}

.tooltip.tooltip-left:hover:after{
  left: auto;
  right: 0;
}

.tooltip.tooltip-leftTop:hover:after{
  left: auto;
  right: 0;
  bottom: 18px;
}

.tooltip.tooltip-box:hover:after {
  height: auto;
  width: 400px;
  white-space: normal;
  bottom: auto;
  top: 100%;
}

.tooltip.tooltip-box2:hover:after {
  height: auto;
  width: 200px;
  white-space: normal;
  bottom: auto;
  top: 100%;
}

.tooltip.tooltip-box.tooltip-boxUp:hover:after {
  bottom: 120%;
  top: auto;
}

.btn-notifications.tooltip:hover:after{
  left: -20px;
}

.btn-closeChat.tooltip:hover:after,
.btn-closeConversation a.tooltip:hover:after {
  left: -13px;
  bottom: -34px;
}

.btn-profile.tooltip:hover:after{
  left: -25px;
}

.btn-upload-cover-photo {
  padding: 7px 20px;
  opacity: 1;
}

.chatHead.tooltip:hover:after{
  left: -123px;
  bottom: 7px;
  max-width: 100px;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.interactiveTooltip {
  height: 20px;
  display: inline-block;
  padding: 4px 10px;
  background: #252525;
  color: #fff;
  position: absolute;
  left: 37px;
  border-radius: 4px;
  font-size: 11px;
  text-align: center;
  line-height: 20px;
  top: 8px;
  opacity: .9;
}

.interactiveTooltip div {
  position: relative;
  display: inline-block;
}

.headerCropper.banner-large,
.headerCropperPreview.banner-large {
  width: 950px;
  height: 400px;
}

.headerCropper.banner-large {
  z-index: 3;
}

.headerCropper .cropit-image-zoom-input {
  position: absolute;
  top: 240px;
  width: 400px;
}
/* ... */

